# branchforge

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: architecture.md  nature_rules.md
examples/: heatmap_hotspot.csv  sample_spec.json
marketing/: landing_copy.md
python/api/: Dockerfile  pyproject.toml
python/api/branchforge_api/: auth.py  auth_utils.py  billing_utils.py  database.py  db.py  email.py  main.py  metrics.py  models.py  queues.py  schemas.py  settings.py  storage.py
python/api/branchforge_api/routers/: analytics.py  auth.py  billing.py  calibration.py  candidates.py  health.py  jobs.py  oauth.py  organizations.py  projects.py  reports.py  sweeps.py  templates.py  webhooks.py
python/branchforge_core/: README.md  pyproject.toml
python/branchforge_core/branchforge_core/: __init__.py  calibration.py  clustering.py  export_cad.py  generator.py  geometry.py  heatmap.py  hydraulics.py  junctions.py  logging_config.py  plan_limits.py  reporting.py  routing.py  schemas.py  scoring.py  sizing.py  storage_backend.py  sweep.py  template_heatmaps.py  templates.py  tree.py  validate.py
python/worker/: Dockerfile  pyproject.toml
python/worker/branchforge_worker/: db.py  models.py  settings.py  tasks.py  worker.py
sales/: outreach_email.txt
web/: Dockerfile  index.html  package.json
web/src/: App.jsx  api.js  styles.css
web/src/pages/: Designer.jsx  Landing.jsx
