[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "branchforge-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "rq>=1.16",
  "redis>=5.0",
  "sqlmodel>=0.0.22",
  "python-dotenv>=1.0",
  "numpy>=1.26",
  "shapely>=2.0",
  "networkx>=3.2",
  "Pillow>=10.0",
  "matplotlib>=3.8",
  "reportlab>=4.0",
  "ezdxf>=1.3",
  "cadquery>=2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["branchforge_worker"]
